0032388: Visualization - provide ray-picking interface with zero tolerance for rectangular frustum